--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,10 +13,7 @@
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-paper": "^5.11.4",
-    "react-native-reanimated-table": "^0.0.2",
-    "react-native-table-component": "^1.2.2"
+    "react-native": "0.72.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
