--- a/mobile/package.json
+++ b/mobile/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest"
+    "test": "jest",
+    "lint": "npx eslint App.js components"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.11",
@@ -22,6 +23,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
     "jest": "^29.7.0",
     "react-test-renderer": "^18.2.0"
   },
