--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -7,7 +7,7 @@ on:
     branches: [ '*' ]
 
 jobs:
-  jestci:
+  eslintci:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
