--- a/mobile/package.json
+++ b/mobile/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.4.3",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "jest": "^29.7.0",
