--- a/.github/workflows/mobile_app.yml
+++ b/.github/workflows/mobile_app.yml
@@ -1,4 +1,4 @@
-name: Snapshot Testing with Jest
+name: Mobile App
 
 on:
   pull_request:
@@ -7,6 +7,20 @@ on:
     branches: [ '*' ]
 
 jobs:
+  eslintci:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 'lts/*'
+      - name: Install Dependencies
+        working-directory: ./mobile
+        run: npm install
+      - name: Lint mobile app using ESLint
+        working-directory: ./mobile
+        run: npm run lint
+  
   jestci:
     runs-on: ubuntu-latest
     steps:
