--- a/mobile/package.json
+++ b/mobile/package.json
@@ -23,9 +23,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@stylistic/eslint-plugin": "^1.5.3",
     "@testing-library/react-native": "^12.4.3",
     "eslint": "^8.56.0",
+    "eslint-plugin-jsdoc": "^48.0.2",
     "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
     "jest": "^29.7.0",
     "react-test-renderer": "^18.2.0"
   },
